--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,8 @@ repositories {
 
 dependencies {
     compile group:'mysql',name:'mysql-connector-java',version:'5.1.6'
-    providedCompile "javax:javaee-api:6.0"
+    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
+    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.2'
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
