--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 }
 
 dependencies {
+    compile group: 'commons-digester', name: 'commons-digester', version: '2.1'
     compile group:'mysql',name:'mysql-connector-java',version:'5.1.6'
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
     compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.2'
